# gim

./: CMakeLists.txt  LICENSE  Makefile  build.sh
3rd/json-c-json-c-0.16-20220414/: json_util.c
3rd/sqlite-amalgamation-3.38.2/: shell.c
3rd/wsServer/doc/man/man3/: ws_ping.3
3rd/wsServer/include/: ws.h
3rd/wsServer/src/: ws.c
conf/: gim.conf
db/: install-gim-mysql.sql  install-gim-sqlite.sql
sdk/js/: gim.js
sdk/swift/: gim.swift
spec/: GIM-Proto.modelbase  GIM.modelbase
src/: gim-biz.c  gim-biz.h  gim-db.h  gim-err.h  gim-misc.g  gim-model.h  gim-mysql.c  gim-sqlite.c  gim-util.c  gim-util.h  gim.c
test/: gim_client.c  gim_get_messages.c  gim_receiver.c  gim_sender.c  gim_test.h  gim_test_10k.c  gim_test_biz.c  gim_test_error.c  gim_test_login.c  gim_test_mysql.c  gim_test_receive.c  gim_test_send.c  toyws.c
test/data/: login.json
